--- a/css/style.css
+++ b/css/style.css
@@ -67,4 +67,22 @@ input {
     padding: 15px 15px;
 }
 
+.title1{
+    padding: 20px;
+    margin: 10px;
+}
 
+.title2{
+    padding: 20px;
+    margin: 10px;
+}
+
+.play2{
+    background-color: rgb(227, 96, 170);
+    font-family: 'NerkoOne';
+}
+
+.play2:hover{
+    background-color: rgb(185, 78, 139);
+    
+}
